add bridge branding

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="favicon.ico">
     <meta http-equiv="Cache-Control" content="no-store" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
