--- a/src/partial.ejs
+++ b/src/partial.ejs
@@ -1,6 +1,7 @@
 <div class="container-fluid">
-  <div class="row">
-    <h1 class="mx-auto">Bridge Tableau Web Data Connector</h1>
+  <div class="row"  style="display: inline;">
+    <a href="https://www.instructure.com/bridge/"><img src="Bridge_Logo_Horizontal.svg" height="100px" /></a>
+    <span class="align-middle"><h1 class="mx-auto">Web Data Connector for Tableau</h1></span>
   </div>
   <div class="row">
     <!-- credential section -->
