--- a/src/partial.ejs
+++ b/src/partial.ejs
@@ -2,6 +2,9 @@
   <div class="row"  style="display: inline;">
     <a href="https://www.instructure.com/bridge/"><img src="Bridge_Logo_Horizontal.svg" height="100px" /></a>
     <span class="align-middle"><h1 class="mx-auto">Web Data Connector for Tableau</h1></span>
+    <div class="card" id="errorCard" style="display: none;">
+      <div class="card-body errorText" id="errorText"></div>
+    </div>
   </div>
   <div class="row">
     <!-- credential section -->
