Able to edit optional and required parameters

--- a/src/partial.ejs
+++ b/src/partial.ejs
@@ -60,9 +60,12 @@
           </select>
         </div>
         <div id="optionalParameterSection">
-          <h3>Optional Parameters</h3>
-          <div id="optionalParameterList">
-
+          <h2>Optional Parameters
+          <button id="optionalParameterButton" class="btn btn-primary mx-5" type="button" data-toggle="collapse" data-target="#optionalParameterList" aria-expanded="false" aria-controls="optionalParameters">
+            Show/Hide Optional Parameters
+          </button>
+        </h2>
+          <div class="collapse" id="optionalParameterList">
           </div>
         </div>
         <button type="button" class="btn btn-primary my-3" id="editDoneButton">Done</button>
