--- a/src/partial.ejs
+++ b/src/partial.ejs
@@ -4,9 +4,8 @@
     <span class="align-middle">
       <h1 class="mx-auto">Web Data Connector for Tableau</h1>
     </span>
-    <div class="card" id="errorCard" style="display: none;">
-      <div class="card-body errorText" id="errorText"></div>
-    </div>
+    <!-- toast wrapper, see ./lib/errorToast -->
+    <div id="toastsContainer"></div>
   </div>
   <div class="row">
     <!-- credential section -->
