--- a/src/partial.ejs
+++ b/src/partial.ejs
@@ -12,11 +12,11 @@
     <div class="col-sm" id="url-section">
       <form id="credentialForm">
         <div class="form-group">
-          <label for="url">URL:</label>
+          <label for="url">Bridge Login URL (https://accountname.bridgeapp.com):</label>
           <input class="form-control" type="text" id="url" required>
         </div>
         <div class="form-group">
-          <label for="apiKey">Key:</label>
+          <label for="apiKey">Authorization (encoded token):</label>
           <input class="form-control" type="text" id="apiKey" required>
         </div>
         <button type="button" class="btn btn-primary" id="credentialsButton">Set Credentials and
@@ -39,7 +39,7 @@
       </div>
       <div>
         <button type="button" class="btn btn-primary" id="resetButton">Change URL and Credentials</button>
-        <button type="button" class="btn btn-primary" id="submitButton">Finish</button>
+        <button type="button" class="btn btn-primary" id="submitButton" disabled>Finish</button>
       </div>
     </div>
     <!-- edit table section -->
